【admin-config】修改默认配置参数

--- a/admin/src/app/shared/customizer/customizer.component.html
+++ b/admin/src/app/shared/customizer/customizer.component.html
@@ -3,12 +3,12 @@
   <a class="customizer-close" (click)="closeCustomizer()">
     <i class="ft-x font-medium-3"></i></a><a class="customizer-toggle bg-primary" id="customizer-toggle-icon"
     (click)="toggleCustomizer()">
-    <i class="ft-settings font-medium-1 spinner white align-middle"></i>
+    <i class="ft-settings font-medium-1 white align-middle"></i>
   </a>
   <div [perfectScrollbar] class="customizer-content p-3 ps-container ps-theme-dark"
     data-ps-id="df6a5ce4-a175-9172-4402-dabd98fc9c0a">
-    <h4 class="text-uppercase">Theme Customizer</h4>
-    <p>Customize & Preview in Real Time</p>
+    <h4 class="text-uppercase">主题个性化</h4>
+    <p>个性化定制，实时预览</p>
     <!-- Layout Options Starts-->
     <div class="ct-layout">
       <hr>
