--- a/admin/src/assets/sass/themes/layout-dark.scss
+++ b/admin/src/assets/sass/themes/layout-dark.scss
@@ -390,6 +390,10 @@ h6,
   }
 }
 
+.d-logo-text {
+  font-size: 1.3rem !important;
+}
+
 // Border colors
 .border {
   @include transparent-style() {
