【admin】 初始化仪表盘的状态管理

--- a/admin/src/pages/Dashboard/components/TodayReport/components/ListModal/components/Leftbar/index.less
+++ b/admin/src/pages/Dashboard/components/TodayReport/components/ListModal/components/Leftbar/index.less
@@ -1,10 +1,11 @@
+@import "../../index";
 .col {
   display: flex !important;
   flex-direction: row !important;
   justify-content: center !important;
   justify-items: center;
-  align-items: center;
-  height: 60px;
+  align-items: flex-end;
+  height: @colHeaderHeight;
   .input {
     max-height: 24px !important;
     border-radius: 4px;
