--- a/admin/src/pages/Dashboard/components/TodayReport/components/ListModal/index.less
+++ b/admin/src/pages/Dashboard/components/TodayReport/components/ListModal/index.less
@@ -1,3 +1,5 @@
+@colHeaderHeight: 40px;
+
 :global(.ant-modal-title) {
   display: flex;
   flex-direction: row;
@@ -15,3 +17,4 @@
 .main{
   border: 1px solid rgba(241, 242, 246, 1);
 }
+
