--- a/admin/src/pages/Dashboard/components/TodayReport/index.less
+++ b/admin/src/pages/Dashboard/components/TodayReport/index.less
@@ -1,1 +1,24 @@
 @import "../../index";
+
+.item{
+  height: 96px;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  .iconWrapper{
+    .iconRender {
+      font-size: 4rem;
+    }
+  }
+  .itemContentRender {
+    align-items: center;
+      padding-top: 0.2rem;
+      height: 4rem;
+      box-sizing: border-box;
+    color: rgba(4, 15, 66, 0.6) !important;
+      div:last-child {
+          font-weight: 500 !important;
+      }
+  }
+}
