【admin】 添加 仪表盘-今日概览-列表的排序状态功能

--- a/admin/src/pages/Dashboard/components/TodayReport/components/ListModal/components/Leftbar/index.less
+++ b/admin/src/pages/Dashboard/components/TodayReport/components/ListModal/components/Leftbar/index.less
@@ -14,3 +14,8 @@
 .listWrapper {
   margin-top: 10px;
 }
+
+.mainRender {
+  border-right: 1px solid rgba(241, 242, 246, 1);
+  box-sizing: border-box;
+}
