--- a/admin/src/pages/Dashboard/components/TodayReport/components/ListModal/components/Rightbar/index.less
+++ b/admin/src/pages/Dashboard/components/TodayReport/components/ListModal/components/Rightbar/index.less
@@ -1,9 +1,7 @@
 @import "../../index";
 
 
-.main {
-  border-left: 1px solid rgba(241, 242, 246, 1);
-  box-sizing: border-box;
+.mainListRender {
 }
 
 .header {
@@ -16,14 +14,14 @@
 }
 
 .itemRender{
-  height: 34px;
+  height: 31px;
   width: 100%;
   padding-left: 10%;
   padding-right: 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   &:hover {
     background-color: #e7f4ff;
   }
