【admin】 仪表盘-今日概览 样式优化

--- a/admin/src/pages/Dashboard/components/TodayReport/index.less
+++ b/admin/src/pages/Dashboard/components/TodayReport/index.less
@@ -1,7 +1,12 @@
 @import "../../index";
+@height:96px;
+
+.main {
+  height: @height * 2;
+}
 
 .item{
-  height: 96px;
+  height: @height;
   width: 70%;
   display: flex;
   flex-direction: row;
