--- a/admin/src/pages/Login/index.less
+++ b/admin/src/pages/Login/index.less
@@ -1,5 +1,20 @@
 @import "../../global";
 
+.spinWrapper {
+  text-align: center;
+  position : fixed;
+  left : 0;
+  top : 0;
+  width : 100%;
+  height : 100%;
+  display : flex;
+  justify-content : center;
+  align-items : center;
+  color : white;
+  background : rgba(0, 0, 0, .7);
+  z-index: 2;
+}
+
 .loginMain {
   display: flex;
   justify-content: start;
