【admin】美化布局滚动条样式和头像菜单hover鼠标样式

--- a/admin/src/layouts/BasicLayout/components/Logo/index.less
+++ b/admin/src/layouts/BasicLayout/components/Logo/index.less
@@ -23,6 +23,7 @@
     padding: 6px 24px;
     &:hover{
       background: rgb(230, 245, 255, 1);
+      cursor: pointer;
     }
   }
   .onlineStatus{
