--- a/admin/src/layouts/BasicLayout/index.less
+++ b/admin/src/layouts/BasicLayout/index.less
@@ -1,4 +1,16 @@
 .contentWrapper {
   height: 100vh;
   overflow: auto;
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 40px;
+    background-color: rgba(0, 0, 0, 0.22);
+  }
+  &::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0);
+    width: 12px;
+  }
 }
