【admin】 对话模块的联系人布局初始化

--- a/admin/src/pages/Chat/index.less
+++ b/admin/src/pages/Chat/index.less
@@ -1,4 +1,8 @@
+.connectWrapper {
+  height: 100vh;
+}
 
-.title {
-  background: rgb(242, 121, 242);
+.conversationWrapper {
+  height: 100vh;
+  background-color: blanchedalmond;
 }
