--- a/admin/src/pages/Chat/components/Connect/components/Extra/components/DrawerRender/components/Visitors/components/TableRender/components/VisitorInforRender/index.less
+++ b/admin/src/pages/Chat/components/Connect/components/Extra/components/DrawerRender/components/Visitors/components/TableRender/components/VisitorInforRender/index.less
@@ -1,3 +1,4 @@
+@import "../../index";
 .iconWrapper {
   width: 100%;
   height: 100%;
@@ -14,5 +15,5 @@
 }
 
 .textWrapper {
-  color: #686f8e;
+  color: @color;
 }
