【admin】 对话-联系区-选卡扩展区-对话页设置-消息通知 初始化

--- a/admin/src/pages/Chat/components/Connect/components/Extra/components/SettingRender/index.less
+++ b/admin/src/pages/Chat/components/Connect/components/Extra/components/SettingRender/index.less
@@ -1,2 +1,10 @@
-.mainWrapper {
+// 被子组件引用的表单容器
+.formPadding {
+  padding: 0 24px 24px !important;
+}
+
+// 被子组件引用的表单lable
+.labelRender {
+  font-weight: bold;
+  font-size: 13px !important;
 }
