--- a/admin/src/pages/Chat/components/Connect/components/Extra/components/SettingRender/components/PageSettingRender/index.less
+++ b/admin/src/pages/Chat/components/Connect/components/Extra/components/SettingRender/components/PageSettingRender/index.less
@@ -1,14 +1,15 @@
+@import "../../index";
+
 .mainWrapper {
-  padding: 0 24px 24px !important;
+  .formPadding;
   .groupItemWrapper {
     :global(.ant-form-item-control-input-content) {
       display: flex;
       justify-content: space-between;
     }
   }
-  .labelRender {
-    font-weight: bold;
-    font-size: 13px !important;
+  .labelRender{
+    .labelRender
   }
 }
 .buttonRender {
