--- a/admin/src/pages/Error/BuildingPage/index.less
+++ b/admin/src/pages/Error/BuildingPage/index.less
@@ -12,13 +12,13 @@
     justify-content: center;
     align-items: center;
     .svgWrapper {
+      .svg {
+        font-size: 20rem;
+      }
        display: flex;
       flex-direction: column;
       justify-items: center;
       align-items: center;
-      .svgRender {
-        font-size: 20rem;
-      }
       .alert {
         font-size: 1.5rem;
         font-weight: 500;
