【admin-fix】修正上传文件组件 设置-聊天链接-pc窗口

--- a/admin/src/pages/Setting/components/ChatLink/components/RightBarRender/components/ChatWindowsSettingRender/components/PcWindows/components/BackPictureRender/index.less
+++ b/admin/src/pages/Setting/components/ChatLink/components/RightBarRender/components/ChatWindowsSettingRender/components/PcWindows/components/BackPictureRender/index.less
@@ -44,6 +44,7 @@
       }
       &:hover {
         .shadeRender {
+          z-index: 2;
           background-color: black;
           opacity: 0.5;
           p {
@@ -73,6 +74,20 @@
     }
     .uploadIconRender {
       font-size: 1.2rem;
+    }
+  }
+  .heaerWarpper {
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    .titleRender {
+
+    }
+    .switchWrapper {
+
     }
   }
 }
