【admin-fix】修复富文本字体选中标识问题

--- a/admin/src/components/Editor/components/FontsizeRender/index.less
+++ b/admin/src/components/Editor/components/FontsizeRender/index.less
@@ -1,12 +1,13 @@
 @import "../../index";
 .fontsizeRenderWrapper {
-  width: 5rem;
+  width: 3.5rem;
   height: @toolsItemHeight;
   line-height: @toolsItemHeight;
   text-align: center;
+  font-size: .9rem;
   margin: .2rem;
   border-radius: @toolsBorderRadius;
   .iconRender {
-    margin-left: .5rem;
+    margin-left: .2rem;
   }
 }
