--- a/admin/src/components/Editor/index.less
+++ b/admin/src/components/Editor/index.less
@@ -10,6 +10,10 @@
   box-sizing: border-box;
   // 工具区域
   .toolsWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
     border-bottom: 1px solid @borderColor;
     width: 100%;
   }
