【admin-fix】解决自定义富文本编辑器的光标不保持在输入框的问题

--- a/admin/src/global.less
+++ b/admin/src/global.less
@@ -1,6 +1,7 @@
 @import '~antd/dist/antd.less';
 @borderColor: rgba(238, 240, 246, 1);
 @fontColor: #b3b7c6;
+@borderRadius: 4px;
 
 // 滚动条样式
 &::-webkit-scrollbar {
@@ -15,3 +16,5 @@
   background-color: rgba(0, 0, 0, 0);
   width: 12px;
 }
+
+// 角弧度
