--- a/admin/src/pages/Setting/components/ChatLink/components/RightBarRender/components/ChatWindowsSettingRender/components/PcWindows/components/FQARender/components/EditFormRender/index.less
+++ b/admin/src/pages/Setting/components/ChatLink/components/RightBarRender/components/ChatWindowsSettingRender/components/PcWindows/components/FQARender/components/EditFormRender/index.less
@@ -1,5 +1,8 @@
 .editFormWrapper {
-  border: solid 1px black;
-  min-height: 10rem;
-  overflow: auto;
+  border: solid 1px #ccc;
+  border-radius: 4px;
 }
+.iconRender {
+  font-size: 1rem;
+}
+
